--- a/Contact.html
+++ b/Contact.html
@@ -10,13 +10,14 @@
     <script src="/Scripts/modernizr-2.5.3.js"></script>
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
     <form method="post" action="./Contact.html" id="ctl01">
         <div class="aspNetHidden">
             <input type="hidden" name="__EVENTTARGET" id="__EVENTTARGET" value="" />
             <input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="" />
-            <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTEwMDUyNjYzMjgPZBYCZg8PFgQeD19fQW50aVhzcmZUb2tlbgUgYTMxNTZlYzlhNDQ4NDljZjg2YmVhYTkyNjQwNDJmNGUeEl9fQW50aVhzcmZVc2VyTmFtZWVkZGQ5qlBORD7iTQRIMQ1I+dt1kZ01MlEa103wzXLt5TvDYw==" />
+            <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTEwMDUyNjYzMjgPZBYCZg8PFgQeD19fQW50aVhzcmZUb2tlbgUgYzFlNjU5ZWY5ZjFlNGJkOTk3YTVhOTg4Y2JiMDkzN2IeEl9fQW50aVhzcmZVc2VyTmFtZWVkZGTLT0NgIFlZmu5wUj7fvsD767E66qAzbxLv9ykS/icSSg==" />
         </div>
 
         <script type="text/javascript">
@@ -36,17 +37,17 @@ function __doPostBack(eventTarget, eventArgument) {
         </script>
 
 
-        <script src="/WebResource.axd?d=q6SJn96_gdIgolV9atBQKn2z6nKdVB4cdXE9dFagyW4hAdEDHA4yQSJKjDZwKtP7A2Lv96yHX0wa8EYvHb5msdFVJ2xG95gwfWeqqr1oHy01&amp;t=637350326898723119" type="text/javascript"></script>
+        <script src="/WebResource.axd?d=q6SJn96_gdIgolV9atBQKn2z6nKdVB4cdXE9dFagyW4hAdEDHA4yQSJKjDZwKtP7A2Lv96yHX0wa8EYvHb5msdFVJ2xG95gwfWeqqr1oHy01&amp;t=637453888754849868" type="text/javascript"></script>
 
 
-        <script src="/ScriptResource.axd?d=uyncLMVCqyYqf0FA8LC8LoygAFHAPdfJzqD0eYHdsmPkYvxcrWBI1ENi85cRj2lSAy1p-BLQZH1q21bEtEviyE5daH_kYxpWSjU3g1AleBRKrLsdk5hSdJvf8GW63a2kv3gHTewjWtd6jOQMIq4JbVThypveMdC6swGBwmnf4Jn0tMusS8m-tXlIfkPWbbZS0&amp;t=2a797f5c" type="text/javascript"></script>
+        <script src="/ScriptResource.axd?d=uyncLMVCqyYqf0FA8LC8LoygAFHAPdfJzqD0eYHdsmPkYvxcrWBI1ENi85cRj2lSAy1p-BLQZH1q21bEtEviyE5daH_kYxpWSjU3g1AleBRKrLsdk5hSdJvf8GW63a2kv3gHTewjWtd6jOQMIq4JbVThypveMdC6swGBwmnf4Jn0tMusS8m-tXlIfkPWbbZS0&amp;t=363be08" type="text/javascript"></script>
         <script type="text/javascript">
 //<![CDATA[
 if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side framework failed to load.');
 //]]>
         </script>
 
-        <script src="/ScriptResource.axd?d=vYiTimv1he-3aa_bKtc2pDjW_ezRxmkFP1M3XJFWat8T-OFXBoytQ7dJ_f1Y-Jd8fRlXvq45eWGnk5nuXdPyssm5_v7oJxUVM1yRd1H6yMpxRHkWSdwWK9oCqVYVFK_C1UpVfdgaKF4uAX8xouLdeBtgu1fFOiWx7Pb5Q-sk8fjOMHKkasSLbYD2WQae3WNP0&amp;t=2a797f5c" type="text/javascript"></script>
+        <script src="/ScriptResource.axd?d=vYiTimv1he-3aa_bKtc2pDjW_ezRxmkFP1M3XJFWat8T-OFXBoytQ7dJ_f1Y-Jd8fRlXvq45eWGnk5nuXdPyssm5_v7oJxUVM1yRd1H6yMpxRHkWSdwWK9oCqVYVFK_C1UpVfdgaKF4uAX8xouLdeBtgu1fFOiWx7Pb5Q-sk8fjOMHKkasSLbYD2WQae3WNP0&amp;t=363be08" type="text/javascript"></script>
         <script src="Scripts/jquery-1.7.1.js" type="text/javascript"></script>
         <script src="Scripts/jquery-ui-1.8.20.js" type="text/javascript"></script>
         <div class="aspNetHidden">
@@ -55,39 +56,39 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
         </div>
         <script type="text/javascript">
 //<![CDATA[
-Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 90, 'ctl00');
+Sys.WebForms.PageRequestManager._initialize('ctl00$ctl10', 'ctl01', [], [], [], 90, 'ctl00');
 //]]>
         </script>
 
         <header>
             <div class="content-wrapper">
-                <div class="float-left">
+                <div class="titlePos">
                     <p class="site-title">
                         <img src="Images/Logo1.jpg" style="height: 134px; width: 271px" />
                     </p>
                 </div>
-                <div class="float-right">
+                <div class="titlePos">
                     <section id="login">
 
                         <ul>
-                            <li><a class="transparent_btn" href="#">Chinese</a></li>
                             <li><a class="transparent_btn" href="#">English</a></li>
+                            <li><a class="transparent_btn" href="#">&nbsp;中&nbsp;文&nbsp;</a></li>
                         </ul>
                         <!--                            <ul>
-                                                        <li><a href="Account/Register.aspx" id="ctl10_A1">Register</a></li>
-                                                        <li><a href="Account/Login.aspx" id="ctl10_A2">Log in</a></li>
+                                                        <li><a href="Account/Register.aspx" id="ctl11_A1">Register</a></li>
+                                                        <li><a href="Account/Login.aspx" id="ctl11_A2">Log in</a></li>
                                                     </ul>
                         -->
 
                     </section>
                     <nav>
                         <ul id="menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="Menus.html">Menus</a></li>
-                            <li><a href="Menu_Sets.html">Meal Sets</a></li>
-                            <li><a href="Others.html">Promotions</a></li>
+                            <li><a href="index.html">首頁</a></li>
+                            <li><a href="Menus.html">緣聚樓菜單</a></li>
+                            <li><a href="Menu_Sets.html">套餐</a></li>
+                            <li><a href="Others.html">特價</a></li>
                             <!--                        <li><a href="About.html">About</a></li>  -->
-                            <li><a href="Contact.html">Contact</a></li>
+                            <li><a href="Contact.html">聯繫信息</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -97,76 +98,54 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
 
             <section class="content-wrapper main-content clear-fix">
 
-                <hgroup class="title">
+                <!--<hgroup class="title">
                     <h2>Contact</h2>
-                </hgroup>
+                </hgroup>-->
+                <h2 class="hrTitle">聯繫信息</h2>
+                <div class="divContact">
+                    <!-- map section -->
+                    <div class="mapOutline" style="float: left;">
+                        <div class="mapPaint">
+                            <iframe width="460" height="310" id="mapPaint" src="https://maps.google.com/maps?q=Unit%20102,%207270%20Woodbine%20Ave.%20Markham%20ON%20Canada&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                            <a href="https://www.embedgooglemap.net">google map html</a>
+                        </div>
+                    </div>
+                    <div class="divCol2"></div>
+                    <!-- Address -->
+                    <div class="divCols">
+                        <div class="divCols">
+                            <ul>
+                                <li><h4>歡迎光臨</h4></li>
+                                <li>7270 Woodbine Ave.</li>
+                                <li>Unit 102</li>
+                                <li>Markham, ON L3R 4B9</li>
+                                <li>Canada</li>
+                                <li></li>
+                            </ul>
+                        </div>
+                        <div class="divCols">
+                            <ul>
+                                <li><h4>聯繫我們</h4></li>
+                                <li><span><i class="fa fa-phone"></i> <a href="tel:9053058988">(905) 305-8988</a></span></li>
+                                <li><span><i class="fa fa-envelope-o"></i> <a href="mailto:Orders@Yuanjulou.com">Orders@Yuanjulou.com</a></span></li>
+                                <li></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="divCols">
+                        <ul>
+                            <li><h4>營業時間</h4></li>
+                            <li><span class="label">星期一:</span> 10:00 AM - 12:00 AM</li>
+                            <li><span class="label">星期二:</span> 10:00 AM - 12:00 AM</li>
+                            <li><span class="label">星期三:</span> 10:00 AM - 12:00 AM</li>
+                            <li><span class="label">星期四:</span> 10:00 AM - 12:00 AM</li>
+                            <li><span class="label">星期五:</span> 10:00 AM - 2:00 AM</li>
+                            <li><span class="label">星期六:</span> 10:00 AM - 2:00 AM</li>
+                            <li><span class="label">星期日:</span> 10:00 AM - 2:00 AM</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <section class="contact">
-                    <header>
-                        <h3>Phone:</h3>
-                    </header>
-                    <p>
-                        <span class="label">Main:</span>
-                        (905) 305-8988
-                    </p>
-                    <p>
-                        <span class="label">After Hours:</span>
-                        (905) 305-8900
-                    </p>
-                </section>
-
-                <section class="contact">
-                    <header>
-                        <h3>Email:</h3>
-                    </header>
-                    <p>
-                        <span class="label">Support:</span>
-                        <span><a href="mailto:Support@MarkhamBreeze.com">Support@MarkhamBreeze.com</a></span>
-                    </p>
-                    <p>
-                        <span class="label">Marketing:</span>
-                        <span><a href="mailto:Marketing@MarkhamBreeze.com">Marketing@MarkhamBreeze.com</a></span>
-                    </p>
-                    <p>
-                        <span class="label">General:</span>
-                        <span><a href="mailto:General@MarkhamBreeze.com">General@MarkhamBreeze.com</a></span>
-                    </p>
-                </section>
-                <section class="contact">
-                    <header>
-                        <h3>Address:</h3>
-                    </header>
-                    <p>7270 Woodbine Ave.</p>
-                    <p>Unit 102</p>
-                    <p>Markham, ON L3R 4B9</p>
-                    <p>Canada</p>
-                </section>
-                <section class="contact">
-                    <header>
-                        <h3>Busness Hours:</h3>
-                    </header>
-                    <p>
-                        <span class="label">Mon:</span> 10:00 AM - 12:00 AM
-                    </p>
-                    <p>
-                        <span class="label">Tue:</span> 10:00 AM - 12:00 AM
-                    </p>
-                    <p>
-                        <span class="label">Wed:</span> 10:00 AM - 12:00 AM
-                    </p>
-                    <p>
-                        <span class="label">Thu:</span> 10:00 AM - 12:00 AM
-                    </p>
-                    <p>
-                        <span class="label">Fri:</span> 10:00 AM - 2:00 AM
-                    </p>
-                    <p>
-                        <span class="label">Sat:</span> 10:00 AM - 2:00 AM
-                    </p>
-                    <p>
-                        <span class="label">Sun:</span> 10:00 AM - 2:00 AM
-                    </p>
-                </section>
 
             </section>
         </div>
@@ -174,7 +153,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
             <div class="content-wrapper">
                 <div class="float-left">
                     <p>
-                        &copy; Copyright 2021 - Rainbow Information Technology Inc.
+                        Copyright &copy; 2021 Rainbow Information Technology Inc.
                     </p>
                 </div>
             </div>
