--- a/Menu_Sets.html
+++ b/Menu_Sets.html
@@ -10,13 +10,14 @@
     <script src="/Scripts/modernizr-2.5.3.js"></script>
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
     <form method="post" action="./Menu_Sets.html" id="ctl01">
         <div class="aspNetHidden">
             <input type="hidden" name="__EVENTTARGET" id="__EVENTTARGET" value="" />
             <input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="" />
-            <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTEwMDUyNjYzMjgPZBYCZg8PFgQeD19fQW50aVhzcmZUb2tlbgUgYTMxNTZlYzlhNDQ4NDljZjg2YmVhYTkyNjQwNDJmNGUeEl9fQW50aVhzcmZVc2VyTmFtZWVkZGRs1nFGR3KReY9R/tuOVqehmmrrWt8mXrTINDz57MPl8g==" />
+            <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTEwMDUyNjYzMjgPZBYCZg8PFgQeD19fQW50aVhzcmZUb2tlbgUgYzFlNjU5ZWY5ZjFlNGJkOTk3YTVhOTg4Y2JiMDkzN2IeEl9fQW50aVhzcmZVc2VyTmFtZWVkZGT+nBjXns33iK/w6DuO0J1QcMP0s1NXPf8JDVo+qusPrQ==" />
         </div>
 
         <script type="text/javascript">
@@ -36,17 +37,17 @@ function __doPostBack(eventTarget, eventArgument) {
         </script>
 
 
-        <script src="/WebResource.axd?d=q6SJn96_gdIgolV9atBQKn2z6nKdVB4cdXE9dFagyW4hAdEDHA4yQSJKjDZwKtP7A2Lv96yHX0wa8EYvHb5msdFVJ2xG95gwfWeqqr1oHy01&amp;t=637350326898723119" type="text/javascript"></script>
+        <script src="/WebResource.axd?d=q6SJn96_gdIgolV9atBQKn2z6nKdVB4cdXE9dFagyW4hAdEDHA4yQSJKjDZwKtP7A2Lv96yHX0wa8EYvHb5msdFVJ2xG95gwfWeqqr1oHy01&amp;t=637453888754849868" type="text/javascript"></script>
 
 
-        <script src="/ScriptResource.axd?d=uyncLMVCqyYqf0FA8LC8LoygAFHAPdfJzqD0eYHdsmPkYvxcrWBI1ENi85cRj2lSAy1p-BLQZH1q21bEtEviyE5daH_kYxpWSjU3g1AleBRKrLsdk5hSdJvf8GW63a2kv3gHTewjWtd6jOQMIq4JbVThypveMdC6swGBwmnf4Jn0tMusS8m-tXlIfkPWbbZS0&amp;t=2a797f5c" type="text/javascript"></script>
+        <script src="/ScriptResource.axd?d=uyncLMVCqyYqf0FA8LC8LoygAFHAPdfJzqD0eYHdsmPkYvxcrWBI1ENi85cRj2lSAy1p-BLQZH1q21bEtEviyE5daH_kYxpWSjU3g1AleBRKrLsdk5hSdJvf8GW63a2kv3gHTewjWtd6jOQMIq4JbVThypveMdC6swGBwmnf4Jn0tMusS8m-tXlIfkPWbbZS0&amp;t=363be08" type="text/javascript"></script>
         <script type="text/javascript">
 //<![CDATA[
 if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side framework failed to load.');
 //]]>
         </script>
 
-        <script src="/ScriptResource.axd?d=vYiTimv1he-3aa_bKtc2pDjW_ezRxmkFP1M3XJFWat8T-OFXBoytQ7dJ_f1Y-Jd8fRlXvq45eWGnk5nuXdPyssm5_v7oJxUVM1yRd1H6yMpxRHkWSdwWK9oCqVYVFK_C1UpVfdgaKF4uAX8xouLdeBtgu1fFOiWx7Pb5Q-sk8fjOMHKkasSLbYD2WQae3WNP0&amp;t=2a797f5c" type="text/javascript"></script>
+        <script src="/ScriptResource.axd?d=vYiTimv1he-3aa_bKtc2pDjW_ezRxmkFP1M3XJFWat8T-OFXBoytQ7dJ_f1Y-Jd8fRlXvq45eWGnk5nuXdPyssm5_v7oJxUVM1yRd1H6yMpxRHkWSdwWK9oCqVYVFK_C1UpVfdgaKF4uAX8xouLdeBtgu1fFOiWx7Pb5Q-sk8fjOMHKkasSLbYD2WQae3WNP0&amp;t=363be08" type="text/javascript"></script>
         <script src="Scripts/jquery-1.7.1.js" type="text/javascript"></script>
         <script src="Scripts/jquery-ui-1.8.20.js" type="text/javascript"></script>
         <div class="aspNetHidden">
@@ -55,39 +56,39 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
         </div>
         <script type="text/javascript">
 //<![CDATA[
-Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 90, 'ctl00');
+Sys.WebForms.PageRequestManager._initialize('ctl00$ctl10', 'ctl01', [], [], [], 90, 'ctl00');
 //]]>
         </script>
 
         <header>
             <div class="content-wrapper">
-                <div class="float-left">
+                <div class="titlePos">
                     <p class="site-title">
                         <img src="Images/Logo1.jpg" style="height: 134px; width: 271px" />
                     </p>
                 </div>
-                <div class="float-right">
+                <div class="titlePos">
                     <section id="login">
 
                         <ul>
-                            <li><a class="transparent_btn" href="#">Chinese</a></li>
                             <li><a class="transparent_btn" href="#">English</a></li>
+                            <li><a class="transparent_btn" href="#">&nbsp;中&nbsp;文&nbsp;</a></li>
                         </ul>
                         <!--                            <ul>
-                                                        <li><a href="Account/Register.aspx" id="ctl10_A1">Register</a></li>
-                                                        <li><a href="Account/Login.aspx" id="ctl10_A2">Log in</a></li>
+                                                        <li><a href="Account/Register.aspx" id="ctl11_A1">Register</a></li>
+                                                        <li><a href="Account/Login.aspx" id="ctl11_A2">Log in</a></li>
                                                     </ul>
                         -->
 
                     </section>
                     <nav>
                         <ul id="menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="Menus.html">Menus</a></li>
-                            <li><a href="Menu_Sets.html">Meal Sets</a></li>
-                            <li><a href="Others.html">Promotions</a></li>
+                            <li><a href="index.html">首頁</a></li>
+                            <li><a href="Menus.html">緣聚樓菜單</a></li>
+                            <li><a href="Menu_Sets.html">套餐</a></li>
+                            <li><a href="Others.html">特價</a></li>
                             <!--                        <li><a href="About.html">About</a></li>  -->
-                            <li><a href="Contact.html">Contact</a></li>
+                            <li><a href="Contact.html">聯繫信息</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -97,18 +98,21 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
 
             <section class="content-wrapper main-content clear-fix">
 
+                <!--
                 <hgroup class="title">
                     <h2>Meal Sets</h2>
                 </hgroup>
-
+                -->
                 <section class="contact">
-                    <header>
+                    <!--<header>
                         <h3>二人套餐</h3>
-                    </header>
+                    </header>-->
+                    <h2 class="hrTitle">二人套餐</h2>
+                    <h3 class="hrTitle">甜蜜二人餐 $36</h3>
                     <table class="menuSets">
                         <thead>
                             <tr>
-                                <th colspan="3" class="menuHead">甜蜜二人餐 $36</th>
+                                <th colspan="3" class="menuHead"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -156,14 +160,14 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                                     &nbsp;&nbsp;
                                 </td>
                             </tr>
-
                         </tbody>
                     </table>
                     <p>&nbsp;&nbsp;</p>
+                    <h3 class="hrTitle">浪漫二人套餐 $38</h3>
                     <table class="menuSets">
                         <thead>
                             <tr>
-                                <th colspan="3" class="menuHead">浪漫二人套餐 $38</th>
+                                <th colspan="3" class="menuHead"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -211,19 +215,20 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                                     &nbsp;&nbsp;
                                 </td>
                             </tr>
-
                         </tbody>
                     </table>
                 </section>
-
+                <p>&nbsp;</p>
                 <section class="contact">
-                    <header>
+                    <!--<header>
                         <h3>四人套餐</h3>
-                    </header>
+                    </header>-->
+                    <h2 class="hrTitle">四人套餐</h2>
+                    <h3 class="hrTitle">閤家歡四人套餐 $70</h3>
                     <table class="menuSets">
                         <thead>
                             <tr>
-                                <th colspan="3" class="menuHead">閤家歡四人套餐 $70</th>
+                                <th colspan="3" class="menuHead"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -293,14 +298,14 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                                     &nbsp;&nbsp;
                                 </td>
                             </tr>
-
                         </tbody>
                     </table>
                     <p>&nbsp;&nbsp;</p>
+                    <h3 class="hrTitle">天倫樂四人套餐 $80</h3>
                     <table class="menuSets">
                         <thead>
                             <tr>
-                                <th colspan="3" class="menuHead">天倫樂四人套餐 $80</th>
+                                <th colspan="3" class="menuHead"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -370,19 +375,20 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                                     &nbsp;&nbsp;
                                 </td>
                             </tr>
-
                         </tbody>
                     </table>
                 </section>
-
+                <p>&nbsp;</p>
                 <section class="contact">
-                    <header>
+                    <!--<header>
                         <h3>五人套餐</h3>
-                    </header>
+                    </header>-->
+                    <h2 class="hrTitle">五人套餐</h2>
+                    <h3 class="hrTitle">同樂五人套餐 $86.88</h3>
                     <table class="menuSets">
                         <thead>
                             <tr>
-                                <th colspan="3" class="menuHead">同樂五人套餐 $86.88</th>
+                                <th colspan="3" class="menuHead"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -463,14 +469,14 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                                     &nbsp;&nbsp;
                                 </td>
                             </tr>
-
                         </tbody>
                     </table>
                     <p>&nbsp;&nbsp;</p>
+                    <h3 class="hrTitle">知己五位套餐 $86.88</h3>
                     <table class="menuSets">
                         <thead>
                             <tr>
-                                <th colspan="3" class="menuHead">知己五位套餐 $86.88</th>
+                                <th colspan="3" class="menuHead"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -544,15 +550,17 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                         </tbody>
                     </table>
                 </section>
-
+                <p>&nbsp;</p>
                 <section class="contact">
-                    <header>
+                    <!--<header>
                         <h3>六人套餐</h3>
-                    </header>
+                    </header>-->
+                    <h2 class="hrTitle">六人套餐</h2>
+                    <h3 class="hrTitle">同樂六人套餐 $120</h3>
                     <table class="menuSets">
                         <thead>
                             <tr>
-                                <th colspan="3" class="menuHead">同樂六人套餐 $120</th>
+                                <th colspan="3" class="menuHead"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -636,10 +644,11 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                         </tbody>
                     </table>
                     <p>&nbsp;&nbsp;</p>
+                    <h3 class="hrTitle">共聚六位套餐 $128</h3>
                     <table class="menuSets">
                         <thead>
                             <tr>
-                                <th colspan="3" class="menuHead">共聚六位套餐 $128</th>
+                                <th colspan="3" class="menuHead"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -713,15 +722,17 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                         </tbody>
                     </table>
                 </section>
-
+                <p>&nbsp;</p>
                 <section class="contact">
-                    <header>
+                    <!--<header>
                         <h3>稻香四季私房菜</h3>
-                    </header>
+                    </header>-->
+                    <h2 class="hrTitle">稻香四季私房菜</h2>
+                    <h3 class="hrTitle">二人世界 兩位 $168</h3>
                     <table class="menuSets">
                         <thead>
                             <tr>
-                                <th colspan="3" class="menuHead">二人世界 兩位 $168</th>
+                                <th colspan="3" class="menuHead"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -805,10 +816,11 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                         </tbody>
                     </table>
                     <p>&nbsp;&nbsp;</p>
+                    <h3 class="hrTitle">二人世界 兩位 $168</h3>
                     <table class="menuSets">
                         <thead>
                             <tr>
-                                <th colspan="3" class="menuHead">二人世界 兩位 $168</th>
+                                <th colspan="3" class="menuHead"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -889,11 +901,9 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                                     &nbsp;&nbsp;
                                 </td>
                             </tr>
-
                         </tbody>
                     </table>
                 </section>
-
 
             </section>
         </div>
@@ -901,7 +911,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
             <div class="content-wrapper">
                 <div class="float-left">
                     <p>
-                        &copy; Copyright 2021 - Rainbow Information Technology Inc.
+                        Copyright &copy; 2021 Rainbow Information Technology Inc.
                     </p>
                 </div>
             </div>
