--- a/Menus.html
+++ b/Menus.html
@@ -10,13 +10,14 @@
     <script src="/Scripts/modernizr-2.5.3.js"></script>
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
     <form method="post" action="./Menus.html" id="ctl01">
         <div class="aspNetHidden">
             <input type="hidden" name="__EVENTTARGET" id="__EVENTTARGET" value="" />
             <input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="" />
-            <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTEwMDUyNjYzMjgPZBYCZg8PFgQeD19fQW50aVhzcmZUb2tlbgUgYTMxNTZlYzlhNDQ4NDljZjg2YmVhYTkyNjQwNDJmNGUeEl9fQW50aVhzcmZVc2VyTmFtZWVkZGRK+7KSQZwovYrj7nn4uIMTP+lpz9qKEi5OyzBkDfC7cA==" />
+            <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTEwMDUyNjYzMjgPZBYCZg8PFgQeD19fQW50aVhzcmZUb2tlbgUgYzFlNjU5ZWY5ZjFlNGJkOTk3YTVhOTg4Y2JiMDkzN2IeEl9fQW50aVhzcmZVc2VyTmFtZWVkZGT5ZqRxjsTK4y5oC5KKds9MS25SAv0yJpf7qnNx9dj70A==" />
         </div>
 
         <script type="text/javascript">
@@ -36,17 +37,17 @@ function __doPostBack(eventTarget, eventArgument) {
         </script>
 
 
-        <script src="/WebResource.axd?d=q6SJn96_gdIgolV9atBQKn2z6nKdVB4cdXE9dFagyW4hAdEDHA4yQSJKjDZwKtP7A2Lv96yHX0wa8EYvHb5msdFVJ2xG95gwfWeqqr1oHy01&amp;t=637350326898723119" type="text/javascript"></script>
+        <script src="/WebResource.axd?d=q6SJn96_gdIgolV9atBQKn2z6nKdVB4cdXE9dFagyW4hAdEDHA4yQSJKjDZwKtP7A2Lv96yHX0wa8EYvHb5msdFVJ2xG95gwfWeqqr1oHy01&amp;t=637453888754849868" type="text/javascript"></script>
 
 
-        <script src="/ScriptResource.axd?d=uyncLMVCqyYqf0FA8LC8LoygAFHAPdfJzqD0eYHdsmPkYvxcrWBI1ENi85cRj2lSAy1p-BLQZH1q21bEtEviyE5daH_kYxpWSjU3g1AleBRKrLsdk5hSdJvf8GW63a2kv3gHTewjWtd6jOQMIq4JbVThypveMdC6swGBwmnf4Jn0tMusS8m-tXlIfkPWbbZS0&amp;t=2a797f5c" type="text/javascript"></script>
+        <script src="/ScriptResource.axd?d=uyncLMVCqyYqf0FA8LC8LoygAFHAPdfJzqD0eYHdsmPkYvxcrWBI1ENi85cRj2lSAy1p-BLQZH1q21bEtEviyE5daH_kYxpWSjU3g1AleBRKrLsdk5hSdJvf8GW63a2kv3gHTewjWtd6jOQMIq4JbVThypveMdC6swGBwmnf4Jn0tMusS8m-tXlIfkPWbbZS0&amp;t=363be08" type="text/javascript"></script>
         <script type="text/javascript">
 //<![CDATA[
 if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side framework failed to load.');
 //]]>
         </script>
 
-        <script src="/ScriptResource.axd?d=vYiTimv1he-3aa_bKtc2pDjW_ezRxmkFP1M3XJFWat8T-OFXBoytQ7dJ_f1Y-Jd8fRlXvq45eWGnk5nuXdPyssm5_v7oJxUVM1yRd1H6yMpxRHkWSdwWK9oCqVYVFK_C1UpVfdgaKF4uAX8xouLdeBtgu1fFOiWx7Pb5Q-sk8fjOMHKkasSLbYD2WQae3WNP0&amp;t=2a797f5c" type="text/javascript"></script>
+        <script src="/ScriptResource.axd?d=vYiTimv1he-3aa_bKtc2pDjW_ezRxmkFP1M3XJFWat8T-OFXBoytQ7dJ_f1Y-Jd8fRlXvq45eWGnk5nuXdPyssm5_v7oJxUVM1yRd1H6yMpxRHkWSdwWK9oCqVYVFK_C1UpVfdgaKF4uAX8xouLdeBtgu1fFOiWx7Pb5Q-sk8fjOMHKkasSLbYD2WQae3WNP0&amp;t=363be08" type="text/javascript"></script>
         <script src="Scripts/jquery-1.7.1.js" type="text/javascript"></script>
         <script src="Scripts/jquery-ui-1.8.20.js" type="text/javascript"></script>
         <div class="aspNetHidden">
@@ -55,39 +56,39 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
         </div>
         <script type="text/javascript">
 //<![CDATA[
-Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 90, 'ctl00');
+Sys.WebForms.PageRequestManager._initialize('ctl00$ctl10', 'ctl01', [], [], [], 90, 'ctl00');
 //]]>
         </script>
 
         <header>
             <div class="content-wrapper">
-                <div class="float-left">
+                <div class="titlePos">
                     <p class="site-title">
                         <img src="Images/Logo1.jpg" style="height: 134px; width: 271px" />
                     </p>
                 </div>
-                <div class="float-right">
+                <div class="titlePos">
                     <section id="login">
 
                         <ul>
-                            <li><a class="transparent_btn" href="#">Chinese</a></li>
                             <li><a class="transparent_btn" href="#">English</a></li>
+                            <li><a class="transparent_btn" href="#">&nbsp;中&nbsp;文&nbsp;</a></li>
                         </ul>
                         <!--                            <ul>
-                                                        <li><a href="Account/Register.aspx" id="ctl10_A1">Register</a></li>
-                                                        <li><a href="Account/Login.aspx" id="ctl10_A2">Log in</a></li>
+                                                        <li><a href="Account/Register.aspx" id="ctl11_A1">Register</a></li>
+                                                        <li><a href="Account/Login.aspx" id="ctl11_A2">Log in</a></li>
                                                     </ul>
                         -->
 
                     </section>
                     <nav>
                         <ul id="menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="Menus.html">Menus</a></li>
-                            <li><a href="Menu_Sets.html">Meal Sets</a></li>
-                            <li><a href="Others.html">Promotions</a></li>
+                            <li><a href="index.html">首頁</a></li>
+                            <li><a href="Menus.html">緣聚樓菜單</a></li>
+                            <li><a href="Menu_Sets.html">套餐</a></li>
+                            <li><a href="Others.html">特價</a></li>
                             <!--                        <li><a href="About.html">About</a></li>  -->
-                            <li><a href="Contact.html">Contact</a></li>
+                            <li><a href="Contact.html">聯繫信息</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -97,18 +98,22 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
 
             <section class="content-wrapper main-content clear-fix">
 
+                <!--
                 <hgroup class="title">
                     <h2>Menu</h2>
                 </hgroup>
-
+                -->
                 <section class="contact">
+                    <!--
                     <header>
                         <h3>緣聚樓菜單</h3>
                     </header>
+                    -->
+                    <h2 class="hrTitle">廚師推薦</h2>
                     <table class="menuTable">
                         <thead>
                             <tr>
-                                <th colspan="6" class="menuHead">廚師推薦</th>
+                                <th colspan="6" class="menuHead"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -435,10 +440,11 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                         </tbody>
                     </table>
                     <p>&nbsp;&nbsp;</p>
+                    <h2 class="hrTitle">特色小炒</h2>
                     <table class="menuTable">
                         <thead>
                             <tr>
-                                <th colspan="6" class="menuHead">特色小炒</th>
+                                <th colspan="6" class="menuHead"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -725,10 +731,11 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                         </tbody>
                     </table>
                     <p>&nbsp;&nbsp;</p>
+                    <h2 class="hrTitle">粉麵飯類</h2>
                     <table class="menuTable">
                         <thead>
                             <tr>
-                                <th colspan="6" class="menuHead">粉麵飯類</th>
+                                <th colspan="6" class="menuHead"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -1017,14 +1024,14 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                 </section>
 
                 <section class="contact">
-                    <header>
-                        <h3>緣聚樓菜單</h3>
-                    </header>
+
+                    <h2 class="hrTitle">緣聚樓菜單</h2>
+
                     <table class="menuTable">
                         <tr>
                             <td>
                                 <a class="imgLink" target="_blank" href="Images/Dishes/Dish01.JPG">
-                                    <img src="Images/Dishes/Dish01.JPG" class="thumbnail" alt="香辣富貴花" width="90" />
+                                    <img src="Images/Dishes/Idx/Dish01idx.jpg" class="thumbnail" alt="香辣富貴花" width="90" />
                                 </a>
                             </td>
                             <td></td>
@@ -1032,7 +1039,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                                 <span class="label">1.</span>
                             </td>
                             <td>
-                                香辣富貴花
+                                家鄉臘味炒富貴花
                             </td>
                             <td>
                                 $16.99
@@ -1041,7 +1048,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                         <tr>
                             <td>
                                 <a class="imgLink" target="_blank" href="Images/Dishes/Dish02.JPG">
-                                    <img src="Images/Dishes/Dish02.JPG" class="thumbnail" alt="蔥爆蘑菇牛肉" width="90" />
+                                    <img src="Images/Dishes/Idx/Dish02idx.jpg" class="thumbnail" alt="蔥爆蘑菇牛肉" width="90" />
                                 </a>
                             </td>
                             <td></td>
@@ -1049,7 +1056,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                                 <span class="label">2.</span>
                             </td>
                             <td>
-                                蔥爆蘑菇牛肉
+                                緣聚樓炒齋
                             </td>
                             <td>
                                 $19.99
@@ -1058,7 +1065,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                         <tr>
                             <td>
                                 <a class="imgLink" target="_blank" href="Images/Dishes/Dish03.JPG">
-                                    <img src="Images/Dishes/Dish03.JPG" class="thumbnail" alt="香辣回鍋肉" width="90" />
+                                    <img src="Images/Dishes/Idx/Dish03idx.jpg" class="thumbnail" alt="香辣回鍋肉" width="90" />
                                 </a>
                             </td>
                             <td></td>
@@ -1066,7 +1073,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                                 <span class="label">3.</span>
                             </td>
                             <td>
-                                香辣回鍋肉
+                                川香回鍋肉
                             </td>
                             <td>
                                 $15.99
@@ -1075,7 +1082,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                         <tr>
                             <td>
                                 <a class="imgLink" target="_blank" href="Images/Dishes/Dish04.JPG">
-                                    <img src="Images/Dishes/Dish04.JPG" class="thumbnail" alt="妙手炒粉絲" width="90" />
+                                    <img src="Images/Dishes/Idx/Dish04idx.jpg" class="thumbnail" alt="妙手炒粉絲" width="90" />
                                 </a>
                             </td>
                             <td></td>
@@ -1092,7 +1099,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                         <tr>
                             <td>
                                 <a class="imgLink" target="_blank" href="Images/Dishes/Dish05.JPG">
-                                    <img src="Images/Dishes/Dish05.JPG" class="thumbnail" alt="松鼠魚" width="90" />
+                                    <img src="Images/Dishes/Idx/Dish05idx.jpg" class="thumbnail" alt="松鼠魚" width="90" />
                                 </a>
                             </td>
                             <td></td>
@@ -1100,7 +1107,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                                 <span class="label">5.</span>
                             </td>
                             <td>
-                                松鼠魚
+                                緣聚樓松鼠魚
                             </td>
                             <td>
                                 $36.99
@@ -1116,7 +1123,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
             <div class="content-wrapper">
                 <div class="float-left">
                     <p>
-                        &copy; Copyright 2021 - Rainbow Information Technology Inc.
+                        Copyright &copy; 2021 Rainbow Information Technology Inc.
                     </p>
                 </div>
             </div>
