--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <script src="/Scripts/modernizr-2.5.3.js"></script>
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
     <form method="post" action="./" id="ctl01">
         <div class="aspNetHidden">
             <input type="hidden" name="__EVENTTARGET" id="__EVENTTARGET" value="" />
             <input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="" />
-            <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMjEwNDQyMTMxMw9kFgJmDw8WBB4PX19BbnRpWHNyZlRva2VuBSBhMzE1NmVjOWE0NDg0OWNmODZiZWFhOTI2NDA0MmY0ZR4SX19BbnRpWHNyZlVzZXJOYW1lZWRkZIZLRojrBNqhugzHJcH9x48Btcks6zwPVd3shvzvA7Ts" />
+            <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMjEwNDQyMTMxMw9kFgJmDw8WBB4PX19BbnRpWHNyZlRva2VuBSBjMWU2NTllZjlmMWU0YmQ5OTdhNWE5ODhjYmIwOTM3Yh4SX19BbnRpWHNyZlVzZXJOYW1lZWRkZP9gBXgkT4VNkQ8efjlCbfX5rtbh6QDnhSNOgGYRRuvN" />
         </div>
 
         <script type="text/javascript">
@@ -36,17 +37,17 @@ function __doPostBack(eventTarget, eventArgument) {
         </script>
 
 
-        <script src="/WebResource.axd?d=q6SJn96_gdIgolV9atBQKn2z6nKdVB4cdXE9dFagyW4hAdEDHA4yQSJKjDZwKtP7A2Lv96yHX0wa8EYvHb5msdFVJ2xG95gwfWeqqr1oHy01&amp;t=637350326898723119" type="text/javascript"></script>
+        <script src="/WebResource.axd?d=q6SJn96_gdIgolV9atBQKn2z6nKdVB4cdXE9dFagyW4hAdEDHA4yQSJKjDZwKtP7A2Lv96yHX0wa8EYvHb5msdFVJ2xG95gwfWeqqr1oHy01&amp;t=637453888754849868" type="text/javascript"></script>
 
 
-        <script src="/ScriptResource.axd?d=uyncLMVCqyYqf0FA8LC8LoygAFHAPdfJzqD0eYHdsmPkYvxcrWBI1ENi85cRj2lSAy1p-BLQZH1q21bEtEviyE5daH_kYxpWSjU3g1AleBRKrLsdk5hSdJvf8GW63a2kv3gHTewjWtd6jOQMIq4JbVThypveMdC6swGBwmnf4Jn0tMusS8m-tXlIfkPWbbZS0&amp;t=2a797f5c" type="text/javascript"></script>
+        <script src="/ScriptResource.axd?d=uyncLMVCqyYqf0FA8LC8LoygAFHAPdfJzqD0eYHdsmPkYvxcrWBI1ENi85cRj2lSAy1p-BLQZH1q21bEtEviyE5daH_kYxpWSjU3g1AleBRKrLsdk5hSdJvf8GW63a2kv3gHTewjWtd6jOQMIq4JbVThypveMdC6swGBwmnf4Jn0tMusS8m-tXlIfkPWbbZS0&amp;t=363be08" type="text/javascript"></script>
         <script type="text/javascript">
 //<![CDATA[
 if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side framework failed to load.');
 //]]>
         </script>
 
-        <script src="/ScriptResource.axd?d=vYiTimv1he-3aa_bKtc2pDjW_ezRxmkFP1M3XJFWat8T-OFXBoytQ7dJ_f1Y-Jd8fRlXvq45eWGnk5nuXdPyssm5_v7oJxUVM1yRd1H6yMpxRHkWSdwWK9oCqVYVFK_C1UpVfdgaKF4uAX8xouLdeBtgu1fFOiWx7Pb5Q-sk8fjOMHKkasSLbYD2WQae3WNP0&amp;t=2a797f5c" type="text/javascript"></script>
+        <script src="/ScriptResource.axd?d=vYiTimv1he-3aa_bKtc2pDjW_ezRxmkFP1M3XJFWat8T-OFXBoytQ7dJ_f1Y-Jd8fRlXvq45eWGnk5nuXdPyssm5_v7oJxUVM1yRd1H6yMpxRHkWSdwWK9oCqVYVFK_C1UpVfdgaKF4uAX8xouLdeBtgu1fFOiWx7Pb5Q-sk8fjOMHKkasSLbYD2WQae3WNP0&amp;t=363be08" type="text/javascript"></script>
         <script src="Scripts/jquery-1.7.1.js" type="text/javascript"></script>
         <script src="Scripts/jquery-ui-1.8.20.js" type="text/javascript"></script>
         <div class="aspNetHidden">
@@ -55,39 +56,39 @@ if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side frame
         </div>
         <script type="text/javascript">
 //<![CDATA[
-Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 90, 'ctl00');
+Sys.WebForms.PageRequestManager._initialize('ctl00$ctl10', 'ctl01', [], [], [], 90, 'ctl00');
 //]]>
         </script>
 
         <header>
             <div class="content-wrapper">
-                <div class="float-left">
+                <div class="titlePos">
                     <p class="site-title">
                         <img src="Images/Logo1.jpg" style="height: 134px; width: 271px" />
                     </p>
                 </div>
-                <div class="float-right">
+                <div class="titlePos">
                     <section id="login">
 
                         <ul>
-                            <li><a class="transparent_btn" href="#">Chinese</a></li>
                             <li><a class="transparent_btn" href="#">English</a></li>
+                            <li><a class="transparent_btn" href="#">&nbsp;中&nbsp;文&nbsp;</a></li>
                         </ul>
                         <!--                            <ul>
-                                                        <li><a href="Account/Register.aspx" id="ctl10_A1">Register</a></li>
-                                                        <li><a href="Account/Login.aspx" id="ctl10_A2">Log in</a></li>
+                                                        <li><a href="Account/Register.aspx" id="ctl11_A1">Register</a></li>
+                                                        <li><a href="Account/Login.aspx" id="ctl11_A2">Log in</a></li>
                                                     </ul>
                         -->
 
                     </section>
                     <nav>
                         <ul id="menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="Menus.html">Menus</a></li>
-                            <li><a href="Menu_Sets.html">Meal Sets</a></li>
-                            <li><a href="Others.html">Promotions</a></li>
-                            <!--                        <li><a href="About.html">About</a></li>  -->
-                            <li><a href="Contact.html">Contact</a></li>
+                            <li><a href="index.html">首頁</a></li>
+                            <li><a href="Menus.html">緣聚樓菜單</a></li>
+                            <li><a href="Menu_Sets.html">套餐</a></li>
+                            <li><a href="Others.html">特價</a></li>
+                            <!-- <li><a href="About.html">About</a></li>  -->
+                            <li><a href="Contact.html">聯繫信息</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -95,61 +96,54 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
         </header>
         <div id="body">
 
-            <section class="featured">
-                <div class="content-wrapper">
-                    <hgroup class="title">
-                        <h2>YUANJULOU Chinese Cuisine</h2>
-                    </hgroup>
-                </div>
-            </section>
+            <!--    <section class="featured">
+                    <div class="content-wrapper">
+                        <hgroup class="title">
+                            <h2>YUANJULOU Chinese Cuisine</h2>
+                        </hgroup>
+                    </div>
+                </section>
+            -->
 
             <section class="content-wrapper main-content clear-fix">
 
-                <hgroup class="title">
-                    <h2>緣聚樓</h2>
-                </hgroup>
+                <h2 class="hrTitle">緣聚樓</h2>
                 <section>
-                    <header>
-                        <h3>Introduction</h3>
-                    </header>
-                    <p>
-                        <span class="label">YUANJULOU Chinese Cuisine</span>
-                        YUANJULOU Chinese Cuisine is a fine chinese gourmet restaurant located in Markham Ontario. Managed and operated by famous Chinese Chef Mr. Ng who used to be a master chef in many chinese fine cuisine restaurants.
-                        <br />
-                        The restaurant features elegant decoration throughout their dining halls and private VIP rooms. Guest are treated to first class dining experience in a warm and friendly atomstphere.
-                        <br />
-                        Open daily for traditional dim sum (lunch) and fine Chinese regional dining. To learn more click <a href="#">hear</a>.
-                        <br />
-                    <p>
-                    </p>
+                    <div class="divContact">
+                        <ul>
+                            <li>緣聚樓座落於Woodbine 夾Steeles西北角,交通四通八達。環境優雅,高級會所格調,典雅氣派。</li>
+                            <li>餐館內設多間獨立貴賓房及宴會大廳,歐陸裝璜酒吧,典雅時尚,尊貴盡顯。獨立貴賓房內設有卡拉OK及麻將房供賓客享用。宴會大廳設有舞台和巨型屏幕牆,可舉辦大型婚宴幾各種聚會。</li>
+                            <li>緣聚樓的主廚曾主理過多倫多多間高級中國餐館。秉承顧客至上,服務精益求精的宗旨,服務於大多地區,旨在將中國美食文化發揚光大。</li>
+                        </ul>
+                        <p>
+                        </p>
+                    </div>
                 </section>
                 <section>
                     <header>
-                        <h3>Photos</h3>
+                        <h3></h3>
                     </header>
                     <div id="photoShow">
                         <a class="imgLink" target="_blank" href="Images/Photos/Photo1.jpg">
-                            <img src="Images/Photos/Photo1.JPG" class="thumbnail" alt="Photo 1" width="400" />
+                            <img src="Images/Photos/Idx/Photo1idx.jpg" class="thumbnail" alt="Photo 1" width="400" />
                         </a>
                         <a class="imgLink" target="_blank" href="Images/Photos/Photo2.jpg">
-                            <img src="Images/Photos/Photo2.JPG" class="thumbnail" alt="Photo 2" width="400" />
+                            <img src="Images/Photos/Idx/Photo2idx.jpg" class="thumbnail" alt="Photo 2" width="400" />
                         </a>
                         <a class="imgLink" target="_blank" href="Images/Photos/Photo3.jpg">
-                            <img src="Images/Photos/Photo3.JPG" class="thumbnail" alt="Photo 3" width="400" />
+                            <img src="Images/Photos/Idx/Photo3idx.jpg" class="thumbnail" alt="Photo 3" width="400" />
                         </a>
                         <a class="imgLink" target="_blank" href="Images/Photos/Photo4.jpg">
-                            <img src="Images/Photos/Photo4.JPG" class="thumbnail" alt="Photo 4" width="400" />
+                            <img src="Images/Photos/Idx/Photo4idx.jpg" class="thumbnail" alt="Photo 4" width="400" />
                         </a>
                         <a class="imgLink" target="_blank" href="Images/Photos/Photo5.jpg">
-                            <img src="Images/Photos/Photo5.JPG" class="thumbnail" alt="Photo 5" width="400" />
+                            <img src="Images/Photos/Idx/Photo5idx.jpg" class="thumbnail" alt="Photo 5" width="400" />
                         </a>
                         <a class="imgLink" target="_blank" href="Images/Photos/Photo6.jpg">
-                            <img src="Images/Photos/Photo6.JPG" class="thumbnail" alt="Photo 6" width="400" />
+                            <img src="Images/Photos/Idx/Photo6idx.jpg" class="thumbnail" alt="Photo 6" width="400" />
                         </a>
                     </div>
-
                 </section>
-
 
             </section>
         </div>
@@ -157,7 +151,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
             <div class="content-wrapper">
                 <div class="float-left">
                     <p>
-                        &copy; Copyright 2021 - Rainbow Information Technology Inc.
+                        Copyright &copy; 2021 Rainbow Information Technology Inc.
                     </p>
                 </div>
             </div>
